# Flowkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  UPLOAD_MARKER_20260320.txt  package.json  tsconfig.base.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/demo/: index.html  package.json
apps/demo/src/: App.tsx  index.css
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PROTOCOL.md  WIDGET_CATALOG.md
python/: pyproject.toml
python/flowkit/: __init__.py  prompts.py  response.py  validate.py
