[project]
name = "flowkit"
version = "0.1.0"
description = "FlowKit Python SDK"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "FlowKit Contributors" }]
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
